--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "main": "src/index.js",
   "homepage": "http://dakotalrubin.github.io/tetris",
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "autoprefixer": "^10.4.16",
     "loader-utils": "3.2.1",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
@@ -15,6 +18,7 @@
   "devDependencies": {
     "@babel/runtime": "7.13.8",
     "gh-pages": "^6.0.0",
+    "tailwindcss": "^3.3.5",
     "typescript": "4.1.3"
   },
   "scripts": {
